[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pymiro"
version = "0.1.0"
description = "A signal-native, declarative GUI framework for Python"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
keywords = ["gui", "signals", "reactive", "desktop", "framework"]
classifiers = [
    "Development Status :: 1 - Planning",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "pyside6>=6.7.0",
    "qasync>=0.27.0",
]

[project.optional-dependencies]
dev = [
    "hatchling",
    "build",
    "twine",
    "ruff",
    "mypy",
    "pytest",
    "pytest-asyncio",
]

[tool.ruff]
target-version = "py312"
line-length = 88

[tool.mypy]
python_version = "3.12"
strict = true

[dependency-groups]
dev = [
    "pytest-qt>=4.5.0",
]
