[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pymiro"
version = "0.1.0"
description = "A signal-native, declarative GUI framework for Python"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
keywords = [
    "gui", "framework", "reactive", "signals",
    "desktop", "declarative", "pyside6", "qt"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Software Development :: User Interfaces",
    "Topic :: Desktop Environment",
    "Operating System :: OS Independent",
]
dependencies = [
    "PySide6>=6.7.0",
    "qasync>=0.27.0",
    "watchdog>=4.0.0",
]

[project.optional-dependencies]
dev = [
    "hatchling",
    "build",
    "twine",
    "ruff",
    "mypy",
    "pytest",
    "pytest-asyncio",
    "pytest-qt",
]

[project.urls]
Homepage = "https://github.com/LikhinMN/pymiro"
Repository = "https://github.com/LikhinMN/pymiro"
Issues = "https://github.com/LikhinMN/pymiro/issues"

[tool.ruff]
target-version = "py312"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.12"
strict = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
